fixed 1st round of fixes

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ people:
 
 - name: Bo Olsen
   pic: 3
-  position: Programmer
+  position: Senior Software Engineer
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
