--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,9 +1,11 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  #primary: fed136
-  #secondary: fec503   
-  primary: 1de8da
-  secondary: 44d4ca
+  #primary: fed136 # orig color
+  #secondary: fec503  # orig color
+  #primary: 1de8da # bright light blue
+  #secondary: 44d4ca # bright light blue
+  primary: 00b4e7 # lighter blue
+  secondary: 02568a # blue
   secondary-dark: 333
   muted: 777
 
