added blurb in xml

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: https://wattlearn-www.github.io
 # Site settings
 title: Watt-Learn Homepage
 email: info@wattlearn.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Watt-Learn | Intelligent Batteries for Reliable and Profitable Grid. Watt-Learn offers revolutionary cloud-based AI software for battery installations. Our AI platform maximizes ROI and life of battery projects at different scale."
 
 
 # Team names, titles and social links
