--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ people:
   social:
     - title: linkedin
       url: https://www.linkedin.com/in/matineh-eybpoosh-647b5134
+  bio: Matineh has years of experience in building a variety of machine-learning software solutions that address open challenges in the energy space. Before Watt-Learn, she was the Director of Data Science at kWantera - an Energy Management company where she led development of the company’s AI platform for energy market intelligence. She completed her Ph.D. at Carnegie Mellon University, where she developed machine-learning algorithms for proactive diagnosis of energy systems.
 
 - name: Puneeth Kalavase, Ph.D.
   pic: 2
@@ -23,10 +24,12 @@ people:
   social:
     - title: linkedin
       url: https://www.linkedin.com/puneeth-kalavase-0a378532
+  bio: Puneeth is a clean-energy professional with demonstrated experience using software and data analysis in the service or reducing carbon emissions. Prior to Watt-Learn, Puneeth led the data science team at Stem, an early behind-the-meter energy storage provider. Before that, he was at Plotwatt, an energy efficiency analytics company. Before entering industry, Puneeth was a postdoctoral researcher at the Lawrence Berkeley National Laboratory where he analyzed the impact of global appliance efficiency standards. Puneeth completed his Ph.D in Experimental High Energy Physics at UC Santa Barbara.
 
 - name: Bo Olsen
   pic: 3
   position: Senior Software Engineer
+  bio: Bo's background is in high energy physics working on recreating moments after the big bang using experiments at CERN. Shortly after, he tried his luck in the energy field as a embedded engineer at Stem Inc. to control behind the meter storage. Since, Bo has been a consultant for several enegy startups before landing softly at Watt-Learn. At Watt-Learn he is leading the development of our cloud-based software infrastructure.
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
