--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ url: https://wattlearn-www.github.io
 #baseurl: /agency-jekyll-theme/
 
 # Site settings
-company: Watt-Learn
-title: Homepage
+title: Watt-Learn
 email: meybpoosh@wattlearn.com
 description: "Watt-Learn | Intelligent Batteries for Reliable and Profitable Grid. Watt-Learn offers revolutionary cloud-based AI software for battery installations. Our AI platform maximizes ROI and life of battery projects at different scale."
 
@@ -42,7 +41,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 1 Superman street
+ #- line: 1 Superman street
   - line: Palo Alto, California 92037, USA
 
 # Build settings
