--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ social:
   - title: stack-exchange
     url: https://math.stackexchange.com/questions/tagged/linear-programming
   - title: github
-    url: http://github.com/watt-learn
+    url: https://github.com/wattlearn-www/wattlearn-www.github.io
 
 # Postal address (add as many lines as necessary)
 address:
