--- a/_config.yml
+++ b/_config.yml
@@ -3,32 +3,101 @@ url: https://wattlearn-www.github.io
 
 # Site settings
 title: Watt-Learn
+subtitle: intelligent energy storage for a sustainable grid
+contact:
+  title: contact
+  subtitle: 
 email: meybpoosh@wattlearn.com
 description: "Watt-Learn | Intelligent Batteries for Reliable and Profitable Grid. Watt-Learn offers revolutionary cloud-based AI software for battery installations. Our AI platform maximizes ROI and life of battery projects at different scale."
 
+tech:
+  title: problem
+  alt_title: problem statement
+  subtitle: At WattLearn, we use our diverse and multi-disciplinary backgrounds to turn grid batteries into smart participants of the electricity grid. The result is PLAAS, our Proactive Lifetime-Aware Automation System.
+  fa: fa-bar-chart
+  text:
+    - para: In order to meet renewable energy penetration goals without compromising the reliability of the electricity grid, energy storage is a must.
+      heading:
+      fa_icon:
+    - para: Batteries are one of the most promising technologies for the job. However, in spite of the recent advances in various battery technologies, it is still quite difficult to build economical battery projects. The industry so far has been mainly focused on reducing the cost of the hardware. For example, in the past decade, the cost of lithium-ion batteries has dropped by more than 73%. Reducing the hardware cost, however, is only one aspect of the problem. There are more, and often conflicting, components that go into the equation.
+      heading:
+      fa_icon:
+    - para: Traditional solutions for dispatching battery projects are typically reactive, sub-optimal, and ignorant of battery life. They either over-cycle the battery to increase the value generated, which compromises the life of the battery, or over-size and under-utilize the battery to preserve its life, which reduces the overall value generated from the project.
+      heading:
+      fa_icon:
+    - para: "WattLearn's technology is the best in class to balance between three pillars of battery economy|: the overall life of the project, the cost associated with the project, and the total value generated from the project."
+      heading:
+      fa_icon:
+    - para: Using AI, optimization, and cloud-based computing concepts, our PLAAS technology offers proactive and optimal solutions for often-conflicting objectives derived by energy systems constraints, energy market dynamics, economic & operational objectives, and even uncertainties rooted in human behavior.
+      heading:
+      fa_icon:
+
+solutions:
+  title: services
+  subtitle: Please contact us if you are interested in any of our services. Availability of any of the following offerings is determined on case-by-case basis.
+  timelines:
+    - heading: Proactive lifetime-aware automation system (PLAAS)
+      subheading: for existing and future projects
+      text: PLAAS is here to maximize the value of your battery project. PLAAS serves as an intelligence layer on top of the existing battery control system. It sends setpoints to your battery’s management system proactively to maximize a customized set of objectives for your very specific project (including revenue, savings, number of cycles, lifetime, and carbon footprint). Our system is nonintrusive, technology agnostic, and cloud-based.
+      pic: 1
+      class:
+    - heading: Real time recommendations
+      subheading: for existing projects
+      text: If you conclude that PLAAS is the right fit for your project, but still prefer to have direct control of your battery’s operation, then this is the solution for you. You receive a series of recommended dispatch setpoints, updated in real time. You can either incorporate these setpoints into your battery control system, or use to benchmark your existing strategies.
+      pic: 2
+      class: timeline-inverted
+    - heading: Battery performance audit
+      subheading: for existing projects
+      text: If you wonder what our PLAAS solution can do and how it can make your battery project more efficient, this is a service you would benefit from. We will work closely with you to customize our PLAAS solution to your project’s specifications and needs. We will simulate the past operation of your project with PLAAS in different configurations to demonstrate the value that could have been generated for your project.
+      pic: 3
+      class: 
+
+about:
+  title: about
+  subtitle: 
+  timelines:
+    - heading: Where it all started
+      subheading: 2016
+      text: "WattLearn is a startup from Pittsburgh, begun at <a href='https://www.cmu.edu'>Carnegie Mellon University</a> (CMU). The founders, <a href='https://www.linkedin.com/in/julianlamy/'> Julian Lamy</a> and <a href='https://www.linkedin.com/in/matineh-eybpoosh-647b5134'>Matineh Eybpoosh</a>, have decades of combined experience in tackling some of the most challenging problems in the energy space. In 2016, through his studies of energy storage markets, Julian realizes that one very important factor is missing for batteries:: intelligence. Current batteries are simply too dumb to be profitable. Combining their multidisciplinary background, Julian and Matineh designed machine-learning based software to solve this problem and thereby change the future of our energy landscape.<br/><br/>Since then, Matineh has been leading WattLearn's business and technology development, taking the company from an idea to its current state."
+      pic: 1
+      class:
+    - heading: Our journey
+      subheading:
+      text: WattLearn came out of the <a href="https://alphalab.org/companies/watt-learn/">AlphaLab accelerator</a> and <a href="https://www.plugandplaytechcenter.com/resources/meet-winners-summer-summit-2018/">Plug & Play</a> innovation platform. We have made significant progress in a very short time, and along the way, we have been recognized as one of the front-runners in this domain. WattLearn won first place at the TransTech Energy Business Development Competition at <a href="https://www.cmu.edu">Carnegie Mellon University</a>, was invited to present at the Energy Storage Summit 2017 held by Green Tech Media, won the People’s Choice Award as the best energy startup at Plug & Play, and was a finalist startup presenter at the VERGE 18 conference, just to name a few accolades.<br/><br/>In November 2018, WattLearn was acquired by one of the country’s leading energy investment companies. This partnership has offered WattLearn the unique opportunity to implement its PLAAS solution on some of the country’s largest front of the meter battery projects. We are very excited to have the chance to have an impactful contribution in building a sustainable grid."
+      pic: 2
+      class: timeline-inverted
 
 # Team names, titles and social links
-people:
-- name: Puneeth Kalavase, Ph.D.
-  pic: 2
-  position: Lead Data Scientist
-  social:
-    - title: linkedin
-      url: https://www.linkedin.com/puneeth-kalavase-0a378532
-  bio: Puneeth is a clean-energy professional with demonstrated experience using software and data analysis in the service or reducing carbon emissions. Prior to Watt-Learn, Puneeth led the data science team at Stem, an early behind-the-meter energy storage provider. Before that, he was at Plotwatt, an energy efficiency analytics company. Before entering industry, Puneeth was a postdoctoral researcher at the Lawrence Berkeley National Laboratory where he analyzed the impact of global appliance efficiency standards. Puneeth completed his Ph.D in Experimental High Energy Physics at UC Santa Barbara.
+team:
+  title: team
+  alt_title: Our Amazing Team
+  subtitle:
+  people:
+  - name: Puneeth Kalavase, Ph.D.
+    pic: 2
+    position: Lead Data Scientist
+    social:
+      - title: linkedin
+        url: https://www.linkedin.com/puneeth-kalavase-0a378532
+    bio: Puneeth is a clean-energy professional with demonstrated experience using software and data analysis in the service of reducing carbon emissions. Prior to WattLearn, Puneeth led the data science team at Stem, an early behind the meter energy storage provider. Before that, he was at Plotwatt, an energy efficiency analytics company. Before entering industry, Puneeth was a postdoctoral researcher at the Lawrence Berkeley National Laboratory where he analyzed the impact of global appliance efficiency standards. Puneeth completed his Ph.D. in Experimental High Energy Physics at UC Santa Barbara
+  
+  - name: Matineh Eybpoosh, Ph.D.
+    pic: 1
+    position: CEO, Co-founder
+    social:
+      - title: linkedin
+        url: https://www.linkedin.com/in/matineh-eybpoosh-647b5134
+    bio: Matineh has years of experience and demonstrated leadership in building a variety of machine-learning software solutions for monitoring and controlling energy systems, as well as optimal energy market participation. Her passion is to improve the reliability, efficiency, and accessibility of clean energy across the world. Before WattLearn, she was the Director of Data Science at kWantera, an energy management company where she led the development of the company’s AI platform for energy market intelligence. She completed her Ph.D. at Carnegie Mellon University, where she developed machine-learning algorithms for proactive diagnosis of energy systems.
+  
+  - name: Bo Olsen
+    pic: 3
+    position: Senior Software Engineer
+    bio: Bo's background is in high energy physics working on recreating moments after the big bang using experiments at CERN. Over the years, Bo has been developing production level analyses which include linear programming for non-profits on behalf of endagnered fish, power grid emulators using transfer functions and AI for hybrid power plants. At Watt-Learn he is leading the development of cloud-based software infrastructure.
 
-- name: Matineh Eybpoosh, Ph.D.
-  pic: 1
-  position: CEO, Co-founder
-  social:
-    - title: linkedin
-      url: https://www.linkedin.com/in/matineh-eybpoosh-647b5134
-  bio: Matineh has years of experience and demonstrated leadership  in building a variety of machine-learning software solutions for monitoring and controlling energy systems, as well as optimal energy market participation. Her passion is to improve the reliability, efficiency, and accessibility of clean energy across the world. Before Watt-Learn, she was the Director of Data Science at kWantera - an Energy Management company where she led the development of the company’s AI platform for energy market intelligence. She completed her Ph.D. at Carnegie Mellon University, where she developed machine-learning algorithms for proactive diagnosis of energy systems.
-
-- name: Bo Olsen
-  pic: 3
-  position: Senior Software Engineer
-  bio: Bo's background is in high energy physics working on recreating moments after the big bang using experiments at CERN. Shortly after, he tried his luck in the energy field as a embedded engineer at Stem Inc. to control behind the meter storage. Since, Bo has been a consultant for several enegy startups before landing softly at Watt-Learn. At Watt-Learn he is leading the development of our cloud-based software infrastructure.
+career:
+  title: career
+  alt_title: Career Opportunnities
+  subtitle: "As an award-winning clean-tech startup, Watt-Learn is developing revolutionary AI-based software for the next generation of energy storage battery projects that will optimize the growth of renewable energy and reduce mankind’s reliance on fossil fuels.<br/><br/>We are looking for champions who are excited to make meaningful impacts on our mission by being part of Watt-Learn’s story in solving some of the world’s most pressing environmental challenges.<br/><br/>Watt-Learn is a startup founded by energy and software enthusiasts from Carnegie Mellon University and is now backed by one of the largest private energy investors in the country. That means Watt-Learn employees get the best of both worlds:: security and benefits of a well-funded and stable company, and the excitement, visibility and growth opportunities of being part of a fast-growing and innovative startup."
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
