fixed aspect ratio of url preview

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ contact:
   subtitle: 
 email: meybpoosh@wattlearn.com
 description: "Watt-Learn | Intelligent Batteries for Reliable and Profitable Grid. Watt-Learn offers revolutionary cloud-based AI software for battery installations. Our AI platform maximizes ROI and life of battery projects at different scale."
-header_image: img/logos/logo.png
+header_image: img/logos/logo_thumb.png
 
 tech:
   title: problem
