--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@ url: https://wattlearn-www.github.io
 #baseurl: /agency-jekyll-theme/
 
 # Site settings
-title: Watt-Learn
+title: WattLearn
 subtitle: intelligent energy storage for a sustainable grid
 contact:
   title: contact
   subtitle: 
 email: meybpoosh@wattlearn.com
-description: "Watt-Learn | Intelligent Batteries for Reliable and Profitable Grid. Watt-Learn offers revolutionary cloud-based AI software for battery installations. Our AI platform maximizes ROI and life of battery projects at different scale."
+description: "WattLearn | Intelligent Batteries for Reliable and Profitable Grid. WattLearn offers revolutionary cloud-based AI software for battery installations. Our AI platform maximizes ROI and life of battery projects at different scale."
 header_image: img/og.jpg
 
 tech:
@@ -93,12 +93,12 @@ team:
   - name: Bo Olsen
     pic: 3
     position: Senior Software Engineer
-    bio: Bo's background is in high energy physics working on recreating moments after the big bang using experiments at CERN. Over the years, Bo has been developing production level analyses which include linear programming for non-profits on behalf of endagnered fish, power grid emulators using transfer functions and AI for hybrid power plants. At Watt-Learn he is leading the development of cloud-based software infrastructure.
+    bio: Bo's background is in high energy physics working on recreating moments after the big bang using experiments at CERN. Over the years, Bo has been developing production level analyses which include linear programming for non-profits on behalf of endagnered fish, power grid emulators using transfer functions and AI for hybrid power plants. At WattLearn he is leading the development of cloud-based software infrastructure.
 
 career:
   title: career
   alt_title: Career Opportunnities
-  subtitle: "As an award-winning clean-tech startup, Watt-Learn is developing revolutionary AI-based software for the next generation of energy storage battery projects that will optimize the growth of renewable energy and reduce mankind’s reliance on fossil fuels.<br/><br/>We are looking for champions who are excited to make meaningful impacts on our mission by being part of Watt-Learn’s story in solving some of the world’s most pressing environmental challenges.<br/><br/>Watt-Learn is a startup founded by energy and software enthusiasts from Carnegie Mellon University and is now backed by one of the largest private energy investors in the country. That means Watt-Learn employees get the best of both worlds:: security and benefits of a well-funded and stable company, and the excitement, visibility and growth opportunities of being part of a fast-growing and innovative startup."
+  subtitle: "As an award-winning clean-tech startup, WattLearn is developing revolutionary AI-based software for the next generation of energy storage battery projects that will optimize the growth of renewable energy and reduce mankind’s reliance on fossil fuels.<br/><br/>We are looking for champions who are excited to make meaningful impacts on our mission by being part of WattLearn’s story in solving some of the world’s most pressing environmental challenges.<br/><br/>WattLearn is a startup founded by energy and software enthusiasts from Carnegie Mellon University and is now backed by one of the largest private energy investors in the country. That means WattLearn employees get the best of both worlds:: security and benefits of a well-funded and stable company, and the excitement, visibility and growth opportunities of being part of a fast-growing and innovative startup."
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
